# cutmap

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md
skills/cutmap/: SKILL.md
src/bilikit/: __init__.py  cli.py  render.py  subclean.py  terms.txt  util.py
src/cutmap/: __init__.py  _assets.py  broll.py  cli.py  frames.py  render.py  subclean.py  terms.txt  util.py
tests/: test_broll.py  test_frames.py  test_subclean.py
