[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cutmap"
version = "0.2.0"
description = "Turn any video into a browsable, searchable storyboard — and auto-extract its B-roll. Local ffmpeg + perceptual hashing, no LLM."
readme = "README.md"   # 英文主版，同时用于 PyPI 与 GitHub 首页；中文见 README.zh-CN.md
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["video", "storyboard", "b-roll", "ffmpeg", "subtitle", "perceptual-hash", "分镜"]
dependencies = ["Pillow>=9.0"]
authors = [{ name = "Xiangyu Kong" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Video :: Non-Linear Editor",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/xykong36/cutmap"
Issues = "https://github.com/xykong36/cutmap/issues"

[project.scripts]
cutmap = "cutmap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cutmap"]

[tool.hatch.build]
include = ["src/cutmap/**/*.py", "src/cutmap/terms.txt"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
